<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DistSysClientAndroid</string>
    <string name="title_activity_maps">Map</string>
    <string name="hint_ip">IP</string>
    <string name="hint_port">Port</string>
    <string name="btn_connect">Connect</string>
    <string name="err_ip">Enter a valid IP</string>
    <string name="err_port">Enter a valid port</string>
    <string name="config_title">Specify IP and Port</string>
    <string name="starting_point_latitude">Starting Point Latitude</string>
    <string name="starting_point_longitude">Starting Point Longitude</string>
    <string name="defaultIp">192.168.1.2</string>
    <string name="defaultPort">9999</string>
    <string name="startingPointLatitudeTitle">Starting Point Latitude</string>
    <string name="startingPointLongitudeTitle">Starting Point Longitude</string>
    <string name="confirmButtonText">Confirm Starting Point</string>
    <string name="endingPointLatitudeTitle">Ending Point Latitude</string>
    <string name="ending_point_latitude">Ending Point Latitude</string>
    <string name="endingPointLongitudeTitle">Ending Point Longitude</string>
    <string name="ending_point_longitude">Ending Point Longitude</string>
    <string name="backButtonText">Back</string>
    <string name="confirmEndingPointButtonText">Confirm Ending Point</string>
    <string name="getNewDirectionsButtonText">Get New Directions</string>
</resources>
